--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "http-video-stream",
+  "name": "pipe",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "mongodb": "^3.6.7",
     "nodemon": "^2.0.5"
   }
 }
