--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "mongodb": "^3.6.7",
-    "nodemon": "^2.0.5"
+    "mongoose": "^5.12.10",
+    "nodemon": "^2.0.5",
+    "pg": "^8.6.0"
   }
 }
